View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030739 | Open CASCADE | OCCT:Data Exchange | public | 2019-05-23 22:55 | 2021-09-09 22:48 |
Reporter | kgv | Assigned To | kgv | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Product Version | 7.3.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0030739: Data Exchange - XCAFDoc_ShapeTool::IsComponent() is too slow | ||||
Description | XCAFDoc_ShapeTool::IsComponent() checks rakes too much time on big assembly, hence it is desired to optimize this function. At least redundant steps creating several Handles can be avoided within TDF_Label::FindAttribute() and TDF_AttributeIterator::Value(). | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR30739 has been created by kgv. SHA-1: 2a6b327cbb2866e71df293c8a1983bc51fd0717f Detailed log of new commits: Author: kgv Date: Thu May 23 23:47:43 2019 +0300 0030739: Data Exchange - XCAFDoc_ShapeTool::IsComponent() is too slow |
|
Branch CR30739_10 has been created by nds. SHA-1: a516227511f3452f9f55b79c961265b0bf210793 No new revisions were added by this update. |
|
Branch CR30739_10 has been updated by nds. SHA-1: 58210fdc17864ed117b8b4f34cc6f2c0af15bce9 Detailed log of new commits: Author: nds Date: Thu Sep 10 19:35:40 2020 +0300 0030737: Visualization - implementing new selection schemes in context AIS_SelectionScheme enumeration is defined to set which selection behaviour is used in Select of context AIS_InteractiveContext is corrected to use single Select method instead of combination of Select/ShiftSelect methods with a selection scheme parameter. |
|
Branch CR30739_10 has been deleted by nds. SHA-1: 58210fdc17864ed117b8b4f34cc6f2c0af15bce9 |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-05-23 22:55 | kgv | New Issue | |
2019-05-23 22:55 | kgv | Assigned To | => gka |
2019-05-23 22:55 | kgv | Assigned To | gka => pdn |
2019-05-23 22:55 | kgv | Relationship added | related to 0030738 |
2019-05-23 23:07 | kgv | Relationship added | related to 0028853 |
2019-05-23 23:55 | git | Note Added: 0084588 | |
2019-09-04 16:26 | kgv | Assigned To | pdn => kgv |
2019-09-04 16:26 | kgv | Target Version | 7.4.0 => 7.5.0 |
2020-09-10 18:15 | git | Note Added: 0094403 | |
2020-09-10 19:32 | git | Note Added: 0094413 | |
2020-09-10 19:47 | git | Note Added: 0094418 | |
2020-09-11 17:20 | gka | Target Version | 7.5.0 => 7.6.0 |
2021-09-09 22:48 | kgv | Target Version | 7.6.0 => 7.7.0 |