0030739: Data Exchange - XCAFDoc_ShapeTool::IsComponent() is too slow